logs/smart-date.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smart_date'...
Listing './lib/python3.5/site-packages/smart_date/test'...
Compiling './lib/python3.5/site-packages/smart_date/test/data_provider.py'...
***   File "./lib/python3.5/site-packages/smart_date/test/data_provider.py", line 13
    print "Assertion error caught with data set ", i
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smart_date/test/test_smartfunction.py'...
***   File "./lib/python3.5/site-packages/smart_date/test/test_smartfunction.py", line 681
    get_period((07, 1, 2010), (14, 2, 2010))
                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/smart_date-2.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
